# netra-profiler

./: .gitignore  LICENSE  README.md  mkdocs.yml  netra_profile_schema_v1.json  pyproject.toml
.github/workflows/: ci.yaml
.zed/: settings.json
benchmarks/: generate_dataset.py  run_benchmark.py
docs/: index.md
src/netra_profiler/: __init__.py  alerts.py  core.py  diagnostics.py  engine.py  profiler.py  types.py
src/netra_profiler/cli/: console.py  main.py  theme.py
tests/cli/: generate_cli_test_data.py
tests/unit/: test_alerts.py  test_complex_types.py  test_core.py  test_diagnostics.py
