[project]
name = "netra-profiler"
version = "0.0.1"
description = "Polars-based high-performance data profiler and reporting tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nitin Paul", email = "nitinpaul.dev@gmail.com" }
]
dependencies = [
    "polars>=1.0.0",       # The engine
    "jinja2>=3.1.0",       # Templating
    "plotly>=5.0.0",       # Visualization
    "pyarrow>=14.0.0",     # Required for Polars IO
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",       # Testing framework
    "hypothesis>=6.0.0",   # Property-based testing
    "ruff>=0.3.0",         # Linter/Formatter (Rust-based)
    "mypy>=1.8.0",         # Static Type Checker
    "memray>=1.11.0",      # Memory Profiler
    "viztracer>=0.16.0",   # Execution Profiler
]

# --- Tool Configuration ---

# Hatchling (Build Backend)
[tool.hatch.build.targets.wheel]
packages = ["src/netra_profiler"]

# Ruff (Linter & Formatter)
[tool.ruff]
line-length = 100
target-version = "py310"   # Enforce Python 3.10+ compatibility
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "UP",  # pyupgrade (modernize python syntax)
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "PL",  # pylint (complexity checks)
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["netra_profiler"]

# Mypy (Static Type Checker)
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true    # Force type hints everywhere
ignore_missing_imports = true

# Pytest (Testing Framework)
[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -ra"
testpaths = ["tests"]
pythonpath = ["src"]
